added binary counter vectorizer and word count for features and added mispelling

--- a/sentimental-analysis-updated.ipynb
+++ b/sentimental-analysis-updated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 52,
    "id": "e479bd2b-bcfb-4d97-b3a7-149d121dc0a6",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "from nltk.stem import PorterStemmer\n",
     "from nltk.metrics.distance  import edit_distance \n",
     "from collections import Counter\n",
-    "from textblob import TextBlob\n",
+    "# from textblob import TextBlob\n",
+    "from autocorrect import Speller\n",
     "import re\n",
     "import os\n",
     "from nltk import word_tokenize\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 53,
    "id": "0fb2d619-60b8-4b88-8204-e203f4ba5f1f",
    "metadata": {},
    "outputs": [
@@ -60,6 +61,7 @@
     "nltk.download('wordnet')\n",
     "nltk.download('averaged_perceptron_tagger_eng')\n",
     "lemmatizer = WordNetLemmatizer()\n",
+    "Spell = Speller()\n",
     "stemmer = PorterStemmer()\n",
     "folder_path = \"/Users/reroreo1/Desktop/p00_tweets/\"\n",
     "files = ['processedPositive.csv', 'processedNeutral.csv', 'processedNegative.csv']\n",
@@ -68,20 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 54,
    "id": "7fec037d-2bfe-4964-85b2-c7f8b00d9969",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "naples ar expensive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(correctMispelling(\"aples ar expesinve\"))\n",
     "def clean_text(text):\n",
     "    # Convert to lowercase, remove numbers, quotes, and strip leading/trailing spaces\n",
     "    text = re.sub(r\"\\d+\", \"\", text.lower()).replace(\"'\", \"\").replace('\"', \"\")\n",
@@ -94,7 +87,7 @@
     "    # Replace 3+ repeated letters with a single occurrence\n",
     "    text = re.sub(r'(.)\\1{2,}', r'\\1', text)  # e.g., \"happyyyy\" -> \"happi\"\n",
     "    text = re.sub(r'[^a-zA-Z\\s]', '', text)   # Remove non-alphabetic characters\n",
-    "    return text\n",
+    "    return Spell(text)\n",
     "    \n",
     "negations = {\"not\", \"no\", \"nor\", \"never\"}\n",
     "\n",
@@ -158,15 +151,12 @@
     "def lemmatize_pos_for_word_count(words):\n",
     "    tags = nltk.pos_tag(words)\n",
     "    lem_list = [lemmatizer.lemmatize(word, get_wordnet_pos(tag)) for word, tag in tags]\n",
-    "    return lem_list\n",
-    "\n",
-    "def correctMispelling(string):\n",
-    "    return str(TextBlob(string).correct())"
+    "    return lem_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 55,
    "id": "dbce4ae5-f3eb-4664-a165-48239cbac05d",
    "metadata": {},
    "outputs": [],
@@ -187,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 56,
    "id": "6f2b552b-b531-4e7e-a0dc-42d830383650",
    "metadata": {
     "scrolled": true
@@ -210,7 +200,6 @@
     "df[\"text\"] = df[\"text\"].apply(word_tokenize)\n",
     "# #remove stop words to avoid noise\n",
     "df[\"text\"] = df[\"text\"].apply(remove_stop_words)\n",
-    "\n",
     "#apply stemmatization on the list of words\n",
     "global_word_count = Counter()\n",
     "\n",
@@ -224,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 57,
    "id": "ea1bb08d-4e08-48d0-a811-c1cbdb9f181d",
    "metadata": {
     "scrolled": true
@@ -234,9 +223,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top Positive Words: [('happy', 571), ('thanks', 94), ('want', 65), ('smile', 56), ('get', 56), ('great', 55), ('much', 54), ('follow', 53), ('love', 52), ('good', 45)]\n",
-      "Top Negative Words: [('unhappy', 682), ('get', 71), ('sad', 70), ('miss', 66), ('not', 62), ('want', 56), ('im', 55), ('dont', 53), ('like', 53), ('go', 51)]\n",
-      "Top Neutral Words: [('also', 78), ('epaper', 75), ('court', 65), ('say', 64), ('india', 54), ('govt', 46), ('minister', 45), ('not', 40), ('supreme', 39), ('take', 37)]\n"
+      "Top Positive Words: [('happy', 573), ('thanks', 95), ('want', 65), ('get', 57), ('great', 56), ('follow', 55), ('smile', 54), ('much', 54), ('love', 52), ('good', 46)]\n",
+      "Top Negative Words: [('unhappy', 688), ('get', 71), ('sad', 69), ('miss', 66), ('not', 63), ('want', 60), ('im', 55), ('dont', 53), ('like', 53), ('go', 53)]\n",
+      "Top Neutral Words: [('also', 78), ('epaper', 75), ('court', 65), ('say', 64), ('india', 53), ('govt', 50), ('minister', 45), ('not', 40), ('supreme', 39), ('take', 37)]\n"
      ]
     }
    ],
@@ -253,7 +242,7 @@
     "print(\"Top Neutral Words:\", neutral_words)\n",
     "\n",
     "vectorizer = CountVectorizer()\n",
-    "\n",
+    "simple_vectorizer = CountVectorizer()\n",
     "X = vectorizer.fit_transform(df['lemmatized_text'])  # Join tokens if tokenized\n",
     "\n",
     "# Get the target variable (e.g., sentiment)\n",
@@ -262,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 58,
    "id": "0bd07874-c189-492d-85ad-51cbe5b71566",
    "metadata": {
     "scrolled": true
@@ -275,19 +264,19 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative       0.99      0.89      0.94       180\n",
-      "     neutral       0.88      0.98      0.92       188\n",
-      "    positive       0.93      0.90      0.91       161\n",
+      "    negative       0.98      0.91      0.94       180\n",
+      "     neutral       0.85      0.98      0.91       188\n",
+      "    positive       0.95      0.85      0.90       161\n",
       "\n",
-      "    accuracy                           0.93       529\n",
-      "   macro avg       0.93      0.92      0.93       529\n",
-      "weighted avg       0.93      0.93      0.93       529\n",
+      "    accuracy                           0.92       529\n",
+      "   macro avg       0.93      0.92      0.92       529\n",
+      "weighted avg       0.92      0.92      0.92       529\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[161  11   8]\n",
-      " [  1 184   3]\n",
-      " [  1  15 145]]\n",
-      "Accuracy: 92.62759924385632 %\n"
+      "[[164  11   5]\n",
+      " [  1 185   2]\n",
+      " [  3  21 137]]\n",
+      "Accuracy: 91.87145557655954 %\n"
      ]
     }
    ],
@@ -337,6 +326,139 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "0eb154e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Generate TF-IDF features\n",
+    "tfidf_vectorizer = TfidfVectorizer(max_features=5000)  # Limit to top 5000 features for efficiency\n",
+    "X_tfidf = tfidf_vectorizer.fit_transform(df['lemmatized_text'])\n",
+    "y = df['sentiment'].apply(sentiment_to_numbers)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "00d32294",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Generate CountVectorizer features\n",
+    "count_vectorizer = CountVectorizer(max_features=5000)  # Limit to top 5000 features for efficiency\n",
+    "X_count = count_vectorizer.fit_transform(df['lemmatized_text'])\n",
+    "simple_count_vectorizer = CountVectorizer(binary=True,max_features=5000)  # Limit to top 5000 features for efficiency\n",
+    "X_simple_count = simple_count_vectorizer.fit_transform(df['lemmatized_text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "35d2c90d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Split data into training and testing sets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train_tfidf, X_test_tfidf, y_train, y_test = train_test_split(X_tfidf, y, test_size=0.2, random_state=42)\n",
+    "X_train_count, X_test_count, _, _ = train_test_split(X_count, y, test_size=0.2, random_state=42)\n",
+    "X_train_simple_count, X_test_simple_count, _, _ = train_test_split(X_simple_count, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "49e9b693",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TF-IDF Logistic Regression Performance:\n",
+      "Accuracy: 0.9149338374291115\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Train Logistic Regression with TF-IDF features\n",
+    "tfidf_model = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "tfidf_model.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "y_pred_tfidf = tfidf_model.predict(X_test_tfidf)\n",
+    "print(\"TF-IDF Logistic Regression Performance:\")\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_tfidf))\n",
+    "# print(\"Classification Report:\\n\", classification_report(y_test, y_pred_tfidf))\n",
+    "# print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_tfidf))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "8dc1fddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CountVectorizer Logistic Regression Performance:\n",
+      "Accuracy: 0.9187145557655955\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Train Logistic Regression with CountVectorizer features\n",
+    "count_model = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "count_model.fit(X_train_count, y_train)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "y_pred_count = count_model.predict(X_test_count)\n",
+    "print(\"CountVectorizer Logistic Regression Performance:\")\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_count))\n",
+    "# print(\"Classification Report:\\n\", classification_report(y_test, y_pred_count))\n",
+    "# print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_count))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "1c8e373a-8e35-412d-8aa7-36c44e09fab0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary CountVectorizer Logistic Regression Performance:\n",
+      "Accuracy: 0.9187145557655955\n"
+     ]
+    }
+   ],
+   "source": [
+    "simple_count_model = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "simple_count_model.fit(X_train_simple_count, y_train)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "y_pred_count = count_model.predict(X_test_count)\n",
+    "print(\"Binary CountVectorizer Logistic Regression Performance:\")\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_count))\n",
+    "# print(\"Classification Report:\\n\", classification_report(y_test, y_pred_count))\n",
+    "# print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_count))"
+   ]
   }
  ],
  "metadata": {
