gridsearch and hot parameters left , adding algorithms GNB OR RANDOM FOREST optional

--- a/latestTweets.ipynb
+++ b/latestTweets.ipynb
@@ -3,10 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29eb2b3d-8dc6-4962-8b8c-b738c956db00",
+   "id": "d0a4ac75-0ffb-4d11-a81e-2ad77d137535",
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install autocorrect\n",
     "import pandas as pd\n",
     "from nltk.stem import PorterStemmer\n",
     "from nltk.metrics.distance  import edit_distance \n",
@@ -147,12 +148,6 @@
     "# #remove stop words to avoid noise\n",
     "df[\"text\"] = df[\"text\"].apply(remove_stop_words)\n",
     "#apply stemmatization on the list of words\n",
-    "global_word_count = Counter()\n",
-    "\n",
-    "\n",
-    "df[\"text\"].apply(lambda x: global_word_count.update(x))\n",
-    "\n",
-    "# print(global_word_count)\n",
     "\n",
     "df['lemmatized_text'] = df[\"text\"].apply(lemmatize_pos)\n",
     "\n",
@@ -269,7 +264,8 @@
     "print(\"Binary CountVectorizer Logistic Regression Performance:\")\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred_count))\n",
     "# print(\"Classification Report:\\n\", classification_report(y_test, y_pred_count))\n",
-    "# print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_count))"
+    "# print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_count))\n",
+    "\n"
    ]
   }
  ],
